update: Navegación a 'Tareas pendientes' y 'Tareas completadas' funcionando

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,33 +2,36 @@ extends layout
 
 block content
     h1 #{title}
-    br
 
     //- SECCIÓN PARA AGREGAR TAREA
 
-    div(style="display:flex; flex-direction: row;")
-    form.well.well-lg(action="/agregar" method="post" style="background-color:#606d80; color:#dce0e6; border-color: #606d80")
-        label(style='margin: 0px 20px 0px 0px;  display: inline')
+    div(style="display:flex;")
+    form.well.well-lg(action="/agregar" method="post" style="display:flex; flex-direction:row; justify-content: space-evenly; margin-bottom: 0px; background-color:#606d80; color:#dce0e6; border-color: #606d80;")
+        label(style='display: inline;')
             label Nueva tarea:
-        input(name="name" type="textbox" style='color:#0e0e0e;')
-        label(style='margin: 0px 20px 0px 20px;  display: inline;')
+        input(name="name" type="textbox" style='color:#0e0e0e; max-height:25px')
+
+        label(style='display: inline;')
             label Categoría:
-        input(name="category" type="textbox" style='color:#0e0e0e;')
-        button.btn.btn.btn-success(type="submit" style='margin-left:50px') Agregar tarea
+        input(name="category" type="textbox" style='color:#0e0e0e; max-height:25px')
+
+        button.btn.btn.btn-warning(type="submit" style='margin-left:50px') Agregar tarea
+
 
     //- SECCIÓN DE BOTONERA PARA FILTRAR/MODIFICAR
 
-    div.well(style="display:flex;flex-direction:row; background-color:#606d80; border-color: #606d80; display: flex; justify-content: space-evenly; margin-top: -24px")
-        button.btn.btn-primary(type="subm it") Actualizar tareas
-        button.btn.btn-primary(type="subm it") Tareas completas
-        button.btn.btn-primary(type="subm it") Todas las tareas
+    div.well(style="display:flex; flex-direction:row; justify-content: space-evenly; margin-top: -24px; background-color:#606d80; border-color: #606d80;")
+        form(action="/" method="get")
+            button.btn.btn-primary(type="subm it") Actualizar tareas
+        form(action="/realizado" method="get")
+            button.btn.btn-success(type="subm it") Tareas completas
+        form(action="/pendientes" method="get")
+            button.btn.btn-dark(type="subm it") Tareas pendientes
     br
-
     //- SECCIÓN PARA MOSTRAR LAS TAREAS 
-
     //- form(action="/eliminar" method="post" style="background-color: #7890a8; color: #fff")
-    form(action="/eliminar" method="post" style="background-color: #7890a8; color: #fff")
-
+        
+    form( style="background-color: #7890a8; color: #fff")
         table.table.table-stripped.table-bordered
             tr
                 td Nombre 
@@ -52,21 +55,20 @@ block content
                             - if (month <= 9) { month = "0" + month  };
                         td #{day + "/" + month + "/" + year }
                         td 
-                             //- SECCIÓN PARA COMPLETAR LAS TAREAS 
 
-                            //- form(action="/completar" method="post")
-                            //- button.btn.btn.btn-info(name="#{task.id}" type="submit" style='margin: auto; display: flex') Completar
+                            //- SECCIÓN PARA COMPLETAR LAS TAREAS 
 
+                            form(action="/realizar" method="post")
+                                button.btn.btn.btn-info(name="#{task.id}" type="submit" style='margin: auto; display: flex') Completar
                             if(task.completed)
-                                button(name="#{task.id}" value="#{!task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent;border:none;text-decoration:line-through;") Completo
-                            //-     input(type="checkbox" name="#{task.id}" value="#{task.completed}", checked=task.completed)
+                                //- button(name="#{task.id}" value="#{!task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:line-through;") Realizado
+                                input(type="checkbox" name="#{task.id}" value="#{task.completed}", checked=task.completed)
+                                label #{task.name}
                             else 
-                                button(name="#{task.id}" value="#{task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent;border:none;text-decoration:none;") Incompleto
-                            //-     input(type="checkbox" name="#{task.id}" value="#{!task.completed}", checked=task.completed)
-                        td
-                            //- SECCIÓN DE BOTÓN PARA ELIMINAR
-
+                                //- button(name="#{task.id}" value="#{task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:none;") Pendiente
+                                input(type="checkbox" name="#{task.id}" value="#{!task.completed}", checked=task.completed)
+                                label #{task.name}
+                        td  
                             form(action="/eliminar" method="post")
-                                button.btn.btn.btn-danger(name="#{task.id}" type="submit" style='margin: auto; display: flex') Eliminar
-                            //- task#{itemId}
-        hr
+                            button.btn.btn.btn-danger(name="#{task.id}" type="submit" style='margin: auto; display: flex') Eliminar
+hr
