--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ html
 
         nav.navbar.navbar-dark.bg-dark.navbar.fixed-top
             div.navbar-header
-                a.navbar-brand(href="#") &nbsp Mi App de tareas por hacer
+                a.navbar-brand(href="#") &nbsp; &nbsp; &nbsp; Mi App de tareas por hacer
         br
 
         block content
