--- a/views/index.jade
+++ b/views/index.jade
@@ -1,43 +1,14 @@
 extends layout
 
 block content
-    h1 #{title}
-
-    //- SECCIÓN PARA AGREGAR TAREA
-
-    div(style="display:flex;")
-    form.card(action="/agregar" method="post" style="display:flex; flex-direction:row; justify-content: space-evenly; align-items: center; height:50px; background-color:#606d80; color:#dce0e6; border-color: #606d80")
-        label(style='display: inline;')
-            label Nueva tarea:
-        input(name="name" type="textbox")
-        label(style='display: inline;')
-            label Categoría:
-        input(name="category" type="textbox")
-
-        button.btn.btn-warning(type="submit" style='padding: 5px; margin-top: 5px; margin-bottom: 5px;') Agregar tarea 
-
-
-    //- SECCIÓN DE BOTONERA PARA FILTRAR/MODIFICAR
-
-    div.card(style="display:flex; flex-direction:row; justify-content: space-evenly; background-color:#606d80; border-color: #606d80; height:50px")
-        form(action="/" method="get")
-            button.btn.btn-primary(type="submit" style='padding: 5px; margin-top: 5px; margin-bottom: 10px;') Actualizar tareas
-        form(action="/realizado" method="get")
-            button.btn.btn-success(type="submit" style='padding: 5px; margin-top: 5px; margin-bottom: 10px;') Tareas completas
-        form(action="/pendientes" method="get")
-            button.btn.btn-dark(type="submit" style='padding: 5px; margin-top: 5px; margin-bottom: 10px;') Tareas pendientes
-    br
-
-    //- SECCIÓN PARA MOSTRAR LAS TAREAS 
-
     form(action="/realizar" method="post" style="background-color: #7890a8; color: #fff; display:flex; justify-content: center; align-items: center;")
         table.table.table-stripped.table-bordered
             tr
-                td Nombre 
-                td Categoría
-                td Fecha 
-                td Estado
-                td Eliminar
+                td.fs-6.text-center.bg-primary.text-white Nombre 
+                td.fs-6.text-center.bg-primary.text-white Categoría
+                td.fs-6.text-center.bg-primary.text-white Fecha 
+                td.fs-6.text-center.bg-primary.text-white Estado
+                td.fs-6.text-center.bg-primary.text-white Eliminar
 
             if(typeof tasks === "undefined")
                 tr
@@ -54,21 +25,20 @@ block content
                             - if (month <= 9) { month = "0" + month  };
                         td #{day + "/" + month + "/" + year }
                         td 
-
+                            
                             //- SECCIÓN PARA COMPLETAR LAS TAREAS 
                             form(action="/realizar" method="post")
                                 button.btn.btn-info(name="#{task.id}" type="submit" style='margin: auto; display: flex') Completar
-
                             if(task.completed)
-                                //- button(name="#{task.id}" value="#{!task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:line-through;") Realizado
+                                button(name="#{task.id}" value="#{!task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:line-through;") Realizado
                                 input(type="checkbox" name="#{task.id}" value="#{task.completed}", checked=task.completed)
                                 label #{task.id}
                             else 
-                                //- button(name="#{task.id}" value="#{task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:none;") Pendiente
+                                button(name="#{task.id}" value="#{task.completed}", onclick=() => {this.value = !this.value}, style="background-color:transparent; border:none; text-decoration:none;") Pendiente
                                 input(type="checkbox" name="#{task.id}" value="#{!task.completed}", checked=task.completed)
                                 label #{task.name}
                         td  
                             //- SECCIÓN PARA ELIMINAR LAS TAREAS 
                             form(action="/eliminar" method="post")
-                                button.btn.btn-danger(name="#{task.id}" type="submit" style='margin: auto; display: flex') Eliminar
+                            button.btn.btn-danger(name="#{task.id}" type="submit" style='margin: auto; display: flex') Eliminar
 hr
