--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,23 +20,23 @@ html
     div.d-flex
     form.card.d-flex.flex-row.justify-content-evenly.align-items-center(action="/agregar" method="post" class="estilo_personalizado")
         label Nueva tarea:
-        input(name="name" type="textbox")
+        input(name="name" type="textbox" required)
 
         label Categoría:
-        input(name="category" type="textbox")
+        input(name="category" type="textbox" required)
 
-        button.btn.btn-warning(type="submit" class="margen" ) Agregar tarea 
+        button.btn.btn-warning(type="submit" class="margen") Agregar tarea 
 
     //- SECCIÓN PARA BUSCAR TAREA POR NOMBRE
     form.card.d-flex.flex-row.justify-content-evenly.align-items-center(action="/buscar" method="get" class="estilo_personalizado")
         label Nombre de tarea:
-        input(name="name" type="textbox")
+        input(name="name" type="textbox" required)
         button.btn.btn-primary(type="submit" class="margen") Buscar tarea
 
     //- SECCIÓN PARA BUSCAR TAREA POR CATEGORÍA
     form.card.d-flex.flex-row.justify-content-evenly.align-items-center(action="/buscarCategoria" method="get" class="estilo_personalizado")
         label Nombre de categoría:
-        input(name="category" type="textbox")
+        input(name="category" type="textbox" required)
 
         button.btn.btn-primary(type="submit" class="margen") Buscar categoría
 
