--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
 
     //- SECCIÓN PARA MOSTRAR LAS TAREAS
 
-    form.d-flex.justify-content-center.align-items-center.text-white(action="/realizar" method="post" style="background-color: #7890a8;")
+    form.border.border-dark.border-5.rounded.d-flex.justify-content-center.align-items-center.text-white(action="/realizar" method="post" style="background-color: #7890a8; width: 120vh; margin:auto;")
         table.table.table-stripped.table-bordered
             tr
                 td.fs-6.text-center.bg-primary.text-white Nombre 
